<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/secondaryLightColor"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--Top Profile Section -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/anonymous_profile" />

                        <ProgressBar
                            android:id="@+id/uploadProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/uploadText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/uploading"
                            android:visibility="gone" />


                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textColor="#424242"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView2"
                        tools:text="Dipesh Kafle" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sendFriendRequestButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bg_button"
                        android:padding="4dp"
                        android:text="@string/friend_request_not_sent"
                        android:textAllCaps="true"
                        android:textColor="@color/percianBlue"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="bottom"
                        app:constraint_referenced_ids="sendFriendRequestButton"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="229dp" />


                    <!--About Me Card-->
                    <LinearLayout
                        android:id="@+id/about_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/circularbordersolid"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sendFriendRequestButton">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_me"
                                    android:textColor="@color/percianBlue"
                                    android:textSize="22sp"
                                    android:textStyle="bold" />


                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                            </LinearLayout>

                            <EditText
                                android:id="@+id/newBioEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/type_something_to_let_your_friends_know_you_better"
                                android:visibility="gone" />

                            <ProgressBar
                                android:id="@+id/bioProgressBar"
                                style="?android:attr/progressBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/bioTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textColor="#000"
                                tools:text="Hey there , lets chat!!!" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>




                <!--friends card-->
                <LinearLayout
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/top_profile">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/friendsTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/friends"
                                android:textColor="@color/percianBlue"
                                android:textSize="22sp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/friends_count_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textSize="14sp"
                                tools:text="99" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/friends_recycler"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:spanCount="4"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            tools:listitem="@layout/friend_item" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <!--persistant bottom navigation-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <!--place_info_card-->
            <include
                android:id="@+id/place_info_card"
                layout="@layout/bottom_sheet_profile_picture" />


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>







