<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/secondaryLightColor"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--Top Profile Section -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="60dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            app:civ_border_color="#EDDFF8"
                            app:civ_border_width="2dp"
                            app:srcCompat="@drawable/groupsicon"

                            />

                        <ProgressBar
                            android:id="@+id/uploadProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/uploadText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/uploading"
                            android:visibility="gone" />


                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/groupName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:textColor="#424242"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                        app:layout_constraintStart_toEndOf="@+id/cardView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.537"
                        tools:text="Test Group 1" />

<!--                    <TextView-->
<!--                        android:id="@+id/email"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginTop="12dp"-->
<!--                        android:textColor="#000"-->
<!--                        android:textSize="16sp"-->
<!--                        app:layout_constraintEnd_toEndOf="@+id/name"-->
<!--                        app:layout_constraintHorizontal_bias="0.473"-->
<!--                        app:layout_constraintStart_toStartOf="@+id/name"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/name"-->
<!--                        tools:text="" />-->

                    <ImageView
                        android:id="@+id/cameraImageView"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_edit_24"
                        app:layout_constraintEnd_toEndOf="@+id/cardView2"
                        app:layout_constraintStart_toStartOf="@+id/cardView2"
                        app:layout_constraintTop_toBottomOf="@+id/cardView2" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <!--About Me Card-->

                <!--friends card-->

                <LinearLayout
                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp"

                    app:layout_constraintEnd_toEndOf="@+id/top_profile"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/top_profile"
                    app:layout_constraintTop_toBottomOf="@+id/top_profile">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Description"
                                android:textColor="@color/percianBlue"
                                android:textSize="24sp"
                                android:textStyle="bold" />


                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/edit_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/edit"
                                android:visibility="gone"

                                android:textColor="@color/primaryColor"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/newBioEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/type_something_to_let_your_friends_know_you_better"
                            android:visibility="gone" />


                        <TextView
                            android:id="@+id/descriptionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="#000"
                            tools:text="Test Group 1 Description " />


                    </LinearLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/friends_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/about_me"
                    tools:layout_editor_absoluteX="8dp">


                    <ImageView
                        android:id="@+id/loadingFriendsImageView"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:src="@drawable/loading_animation"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/friends_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/loadingFriendsImageView"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        tools:text="99" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/friends_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:spanCount="3"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:itemCount="10"
                        tools:listitem="@layout/friend_item" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Members"
                        android:textSize="24sp"
                        android:textColor="@color/percianBlue"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/no_friends_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/friends_layout">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/no_friends_yet"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieAnimationView4"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/empty_box" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addFriendsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/find_friends"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_person_add_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView4" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <!--persistant bottom navigation-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <!--place_info_card-->
            <include
                android:id="@+id/place_info_card"
                layout="@layout/bottom_sheet_profile_picture" />


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>







